<resources>
    <string name="app_name">SQLliteBookStore</string>
    <string name="btn_1">Sign Up</string>
    <string name="btn_2">Log In</string>
    <string name="lbl_1">Email</string>
    <string name="lbl_2">Password</string>
    <string name="txt_em">stg@mail.com</string>
    <string name="pass">*****</string>

    <string name="btn_3">Add Book</string>
    <string name="btn_4">Delete Book</string>
    <string name="btn_5">Update Book</string>
    <string name="btn_6">Add User</string>
    <string name="btn_7">Add Admin</string>

    <string name="lbl_3">Name</string>
    <string name="lbl_4">ISBN</string>
    <string name="lbl_5">Price</string>
    <string name="btn_8">Back</string>
    <string name="btn_9">Next</string>
    <string name="txt_1"></string>
    <string name="txt_2"></string>
    <string name="txt_3"></string>

    <string name="title_1">Add Book</string>
    <string name="title_2">Delete Book</string>
    <string name="title_3">Update Book</string>
    <string name="title_4">Add User</string>
    <string name="title_5">Add Admin</string>

    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_update">Update</string>
    <string name="btn_saveUser">Add</string>
    <string name="btn_saveAdmin">Add</string>

    <string name="lbl_search">Search</string>
    <string name="btn_search">Search</string>


</resources>
